<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/menu_new_game">
        </Button>

        <Button
        android:id="@+id/buttonSetting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/menu_setting">
        </Button>

        <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/menu_about"
        android:id="@+id/buttonAbout"
        android:layout_marginTop="10dp">
        </Button>

    </LinearLayout>

</RelativeLayout>
